feat: GREEN do TDD - implementa o dominio da US1
Aluno, ParticipacaoForum e Forum implementados na forma mais simples que
faz a suite passar. Nenhum teste foi alterado.

Evidencias:
- docs/evidencias/tdd/02-green-testes-passando.txt (16/16, BUILD SUCCESS)
- docs/evidencias/tdd/02-green-cobertura.md (Forum ainda com amarelo e vermelho)